--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-image-picker": "^8.2.1",
     "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.17.1"
+    "react-native-screens": "^4.17.1",
+    "react-native-uuid": "^2.0.3",
+    "realm": "^12.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
