--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^7.3.28",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-compressor": "^1.13.0",
     "react-native-fs": "^2.20.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-image-picker": "^8.2.1",
